MFC: Fix calendar -a processing of files included in the user's home directory

The existing code performed a chdir() into the home directory, but the
parser fell back to using the invoking user's home directory as the base
directory for the search for an include file.

Since use of the -a option is limited to UID==0, the directory searched
was typically ~root/.calendar, not the .calendar directory of the user
whose file is being processed.

PR:		205580
Reported by:	greg.bal4@gmail.com (Greg Balfour)
MFC after:	3 days

(cherry picked from commit 3fa2a149d68d22fa32ba7b6c09773388ac490fd1)

The code in -CURRENT is	quite different	(forks sub-processes tp
process the files for each user) but this change should	provide	the
same functionality as the referenced commit to -CURRENT.